dia01a/net-pol/pod-a.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-a
  name: pod-a
  namespace: net-pol
spec:
  containers:
  - image: nginx
    name: pod-a
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
