dia01a/net-pol/pod-b.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-b
  name: pod-b
  namespace: net-pol
spec:
  containers:
  - image: nginx
    name: pod-b
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
