dia01a/net-pol/egress-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-netpol
  namespace: net-pol
spec:
  podSelector:
    matchLabels:
      run: pod-c
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: pod-a
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system      
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
