dia01a/net-pol/meu-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: meu-netpol
  namespace: net-pol
spec:
  podSelector:
    matchLabels:
      run: pod-c
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: pod-a
    - namespaceSelector:
        matchLabels:
          access: released
    ports:
    - protocol: TCP
      port: 80
